* {bz: 4950}: Fix listview bleeding for browsers with narrow screen width.   Tested on: IE6, FF7, Chrome14, iPad (iOS4 and iOS5).

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -2133,6 +2133,16 @@ table.dataTable {
     width:98%;
 }
 
+table.dataTable.fixed {
+    table-layout: fixed;
+    padding-right: 3px;
+}
+
+table.dataTable.fixed td {
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+}
+
 table.dataTable .date {
     white-space: nowrap;
 }
